# liberte

./: .gitignore  Cargo.toml  Liberté.txt  README.md  SECURITY.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
assets/: bootstrap_peers.toml
crates/liberte-client/: Cargo.toml  tauri.conf.json
crates/liberte-client/capabilities/: default.json
crates/liberte-client/src/: events.rs  lib.rs  main.rs  state.rs  swarm_bridge.rs
crates/liberte-client/src/commands/: backup.rs  channels.rs  files.rs  identity.rs  media.rs  messaging.rs  mod.rs  network.rs  premium.rs  profile.rs  settings.rs
crates/liberte-media/: Cargo.toml
crates/liberte-media/src/: audio.rs  insertable.rs  lib.rs  mixer.rs  signaling.rs  video.rs  webrtc_peer.rs  webrtc_sfu.rs
crates/liberte-net/: Cargo.toml
crates/liberte-net/src/: behaviour.rs  discovery.rs  dns.rs  lib.rs  messages.rs  peers.rs  relay.rs  swarm.rs  transport.rs
crates/liberte-server/: Cargo.toml
crates/liberte-server/src/: api.rs  blob_store.rs  config.rs  error.rs  main.rs  premium.rs  rate_limit.rs  relay.rs  sfu.rs
crates/liberte-shared/: Cargo.toml
crates/liberte-shared/src/: constants.rs  crypto.rs  csam.rs  error.rs  identity.rs  invite.rs  lib.rs  noise.rs  premium.rs  protocol.rs  types.rs
crates/liberte-store/: Cargo.toml
crates/liberte-store/src/: backup.rs  blobs.rs  channels.rs  database.rs  error.rs  lib.rs  messages.rs  models.rs  reactions.rs  servers.rs
crates/liberte-store/src/migrations/: mod.rs  v001_initial.rs  v002_channel_keys.rs  v003_reactions_profile.rs
docker/: .env.example  Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/channels/: CreateChannelModal.tsx  InviteModal.tsx  JoinChannelModal.tsx
frontend/src/components/chat/: MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  ReactionBar.tsx  TypingIndicator.tsx
frontend/src/components/common/: Button.tsx  ConnectionBadge.tsx  Modal.tsx  Tooltip.tsx  UpdateBanner.tsx
frontend/src/components/identity/: ProfileCard.tsx  ProfileModal.tsx  SetupScreen.tsx  StatusSelector.tsx
frontend/src/components/layout/: Header.tsx  MainPanel.tsx  Sidebar.tsx
frontend/src/components/voice/: ParticipantTile.tsx  VoiceControls.tsx  VoicePanel.tsx
frontend/src/hooks/: useMediaDevices.ts
frontend/src/lib/: constants.ts  tauri.ts  types.ts
frontend/src/pages/: Home.tsx  Settings.tsx  Welcome.tsx
frontend/src/stores/: backupStore.ts  identityStore.ts  mediaStore.ts  messageStore.ts  navigationStore.ts  networkStore.ts  themeStore.ts
frontend/src/styles/: global.css
wiki/: Architecture.md  Configuration.md  Contributing.md  FAQ.md  Getting-Started.md  Home.md  Security.md
