[workspace]
resolver = "2"
members = [
    "crates/liberte-shared",
    "crates/liberte-net",
    "crates/liberte-media",
    "crates/liberte-store",
    "crates/liberte-client",
    "crates/liberte-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
liberte-shared = { path = "crates/liberte-shared" }
liberte-net    = { path = "crates/liberte-net" }
liberte-media  = { path = "crates/liberte-media" }
liberte-store  = { path = "crates/liberte-store" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Crypto
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
snow = "0.9"
rand = "0.8"
blake3 = "1"

# Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "quic",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "relay",
    "dcutr",
    "macros",
    "serde",
] }

# DNS
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls", "tokio-runtime"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Misc
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
