[package]
name = "liberte-client"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
liberte-shared = { workspace = true }
liberte-net    = { workspace = true }
liberte-media  = { workspace = true }
liberte-store  = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
libp2p = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[lib]
name = "liberte_client_lib"
path = "src/lib.rs"
