[package]
name = "liberte-client"
version.workspace = true
edition.workspace = true
authors = ["Kayfeer"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
liberte-shared = { workspace = true }
liberte-net    = { workspace = true }
liberte-media  = { workspace = true }
liberte-store  = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
rusqlite = { version = "0.31" }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
directories = "5"
uuid = { workspace = true }
libp2p = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[lib]
name = "liberte_client_lib"
path = "src/lib.rs"
