[package]
name = "liberte-shared"
version.workspace = true
edition.workspace = true
authors = ["Kayfeer"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
snow = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

# CSAM detection
image_hasher = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
bloomfilter = "1"
